--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,5 +1,12 @@
 name: learn-github-actions
-on: [push]
+on: 
+  push:
+    branches:
+    - faetures_gabriel
+  pull_request: 
+    branches:
+    - features_gabriel
+
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
@@ -7,6 +14,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: 14
       - run: npm install -g bats
       - run: bats -v
+      - run: npm ci
+      - run: npm test
